syntax = "proto3";

package todo.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/thernade/todo-app/proto/todo/v1";

message Task {
	uint64 id = 1;
	string description = 2;
	bool done = 3;
	google.protobuf.Timestamp due_date = 4;
}

message AddTaskRequest {
	string description = 1;
	google.protobuf.Timestamp due_date = 2;
}
	message AddTaskResponse {
	uint64 id = 1;
}
service TodoService {
	rpc AddTask(AddTaskRequest) returns (AddTaskResponse);
}